tests/golden/type_errors/map_bad_index.cd
let values: map<string, number> = {"one": 1};
print values[1];
