tests/golden/type_errors/map_bad_index.err
Type error at 2:13: map key is incompatible with map key type
  print values[1];
              ^
